kubernetes/external_v3/external-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubedemo
  namespace: test
  labels:
    app: kubedemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubedemo
  template:
    metadata:
      labels:
        app: kubedemo
    spec:
      containers:
      - name: kubedemo
        image: anldisr/kubedemo:0.0.3
        ports:
          - containerPort: 8090
            protocol: TCP
            name: kubedemo
        resources:
          limits:
            cpu: "0.5"
            memory: 128Mi
          requests:
            cpu: "0.2"
            memory: 64Mi
